Fix spacing issue with body and main

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     background-image: url(images/footprints-multiple.png), url(images/parchment.jpg);
     background-size: contain, cover;
     background-repeat: no-repeat, no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 header {
@@ -28,11 +31,10 @@ h2 {
 }
 
 main {
-    height: 100vh;
-    width: 100%;
     display: grid;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex-grow: 1;
 }
 
 #gameboard {
@@ -94,6 +96,8 @@ main {
     background-size: 80%;
     background-repeat: no-repeat;
     background-position: center;
+    margin-top: 20px;
+    transition: width 2s, height 2s, transform 2s;
 }
 
 footer {
@@ -101,4 +105,5 @@ footer {
     place-items: center;
     padding-top: 15px;
     padding-bottom: 15px;
+    margin-top: 30px;
 }
